--- a/CSS class Selector.css
+++ b/CSS class Selector.css
@@ -2,3 +2,5 @@
     text-align: center;
     color: red;
 }
+
+/*You can also specify that only specific HTML elements should be affected by a class.*/
