--- a/CSS Grouping Selector.css
+++ b/CSS Grouping Selector.css
@@ -1,1 +1,15 @@
 /*Bad practice*/
+h1 {
+    text-align: center;
+    color: red;
+}
+
+h2 {
+    text-align: center;
+    color: red;
+}
+
+p {
+    text-align: center;
+    color: red;
+}
