--- a/CSS Background Shorthand.css
+++ b/CSS Background Shorthand.css
@@ -5,7 +5,7 @@ body {
     background-repeat: no-repeat;
     background-position: right top;
 }
-
+/*Good Practice*/
 body {
     background: #ffffff url("img_tree.png") no-repeat right top;
 }
