--- a/CSS Background Shorthand.css
+++ b/CSS Background Shorthand.css
@@ -9,3 +9,12 @@ body {
 body {
     background: #ffffff url("img_tree.png") no-repeat right top;
 }
+/*
+When using the shorthand property the order of the property values is:
+
+background-color
+background-image
+background-repeat
+background-attachment
+background-position
+*/
